# DANTECLI-WIN-OFICIAL

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: windows.yml
app/: CMakeLists.txt
app/qml/: Main.qml
app/src/: Logging.cpp  Logging.hpp  main.cpp
cmake/: Warnings.cmake
core/: CMakeLists.txt
core/include/dante/domain/: Ids.hpp  Tab.hpp  Workspace.hpp
core/include/dante/orchestration/: Router.hpp
core/include/dante/services/: IPtyBackend.hpp
core/include/dante/terminal/: Cell.hpp  Color.hpp  Screen.hpp  VtParser.hpp
core/include/dante/util/: Result.hpp
core/src/: Ids.cpp  Router.cpp  Screen.cpp  VtParser.cpp
core/tests/: test_result.cpp  test_router.cpp  test_vt.cpp
installer/: dante.iss
persistence/: CMakeLists.txt
persistence/include/dante/persistence/: Database.hpp  KvStore.hpp  MigrationRunner.hpp
persistence/src/: Database.cpp  KvStore.cpp  MigrationRunner.cpp
persistence/tests/: test_kv.cpp
platform/: CMakeLists.txt
platform/include/dante/platform/: PtyFactory.hpp  SysStats.hpp
platform/include/dante/platform/ipc/: NamedPipe.hpp
platform/include/dante/platform/memstat/: MemStat.hpp
platform/include/dante/platform/pty/: ConPtyBackend.hpp
platform/include/dante/platform/secrets/: DpapiSecrets.hpp
platform/include/dante/platform/win/: ScopedHandle.hpp
platform/src/: PtyFactory.cpp  SysStats.cpp
platform/src/ipc/: NamedPipe.cpp
platform/src/memstat/: MemStat.cpp
platform/src/pty/: ConPtyBackend.cpp
platform/src/secrets/: DpapiSecrets.cpp
platform/tests/: test_conpty.cpp  test_ipc.cpp
tools/dante/: CMakeLists.txt  README.md  main.cpp
ui/: CMakeLists.txt
ui/include/dante/ui/: AppController.hpp  CodeHighlighter.hpp  FilesController.hpp  SecretsController.hpp  SettingsController.hpp  StoreController.hpp  SysStatsController.hpp  TerminalController.hpp  TerminalView.hpp  VoiceController.hpp
ui/src/: AppController.cpp  CodeHighlighter.cpp  FilesController.cpp  SettingsController.cpp  StoreController.cpp  SysStatsController.cpp  TerminalController.cpp  TerminalView.cpp  VoiceController.cpp
